--- a/provision/roles/jenkins/templates/jenkins-nginx.j2
+++ b/provision/roles/jenkins/templates/jenkins-nginx.j2
@@ -4,16 +4,6 @@ server {
     server_name {{ site_name }};
  
     location / {
- 
-      proxy_set_header        Host $host:$server_port;
-      proxy_set_header        X-Real-IP $remote_addr;
-      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header        X-Forwarded-Proto $scheme;
- 
-      # Fix the "It appears that your reverse proxy set up is broken" error.
-      proxy_pass          http://127.0.0.1:{{ port_number }};
-      proxy_read_timeout  90;
- 
-      proxy_redirect      http://127.0.0.1:{{ port_number }} https://{{ site_name }};
+      proxy_pass          http://{{ site_name}}:8080;
     }
-  }
+}
